--- a/assets/version.sass
+++ b/assets/version.sass
@@ -1,3 +1,3 @@
 // SETTINGS
-$ver: '1.5.15'
+$ver: '1.5.16'
 $release: 'stable'
